Fix mobile web track screen special access spacing (#2989)

--- a/apps/audius-client/packages/web/src/components/track/TrackBannerIcon.module.css
+++ b/apps/audius-client/packages/web/src/components/track/TrackBannerIcon.module.css
@@ -4,7 +4,6 @@
   left: 0;
   z-index: 10;
   width: 80px;
-  height: 80px;
   pointer-events: none;
 }
 
